--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.208, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 167.88.61.175, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: 185.167.116.24, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 波兰-1.77MB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 38.114.114.69, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 未知国家-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2, server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 波兰-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
